XIVY-7516 Shifting application boundaries